# lox

./: .gitignore  CMakeLists.txt  Environment.hpp  Expr.hpp  Interpreter.hpp  Parser.hpp  ReversePolish.cpp  RuntimeError.hpp  Scanner.h  Scanner.hpp  Stmt.hpp  Token.h  Token.hpp  TokenType.hpp  ast_generator  ast_generator.cpp  error.cpp  flake.nix  main.cpp
examples/: assignment.lox  fib-func.lox  if.lox
src/: main.cpp
src/interpreter/: Environment.cpp  Environment.hpp  Expr.hpp  Interpreter.cpp  Interpreter.hpp  LoxCallable.hpp  LoxFunction.cpp  LoxFunction.hpp  Parser.hpp  ReturnException.hpp  RuntimeError.hpp  Scanner.cpp  Scanner.hpp  Stmt.hpp  Token.cpp  Token.hpp  TokenType.hpp  error.cpp  error.hpp
